fixed for CHLK-4911 Teacher. Feed. Overlapping the 'copy' feature with items

--- a/Chalkable.Web/assets/sass2/4_pages/_feed-list.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_feed-list.sass
@@ -61,6 +61,7 @@
 
     .left-block
       margin-left: 11px
+      float: left
 
     .chosen-container
       width: 140px !important
